--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -7,8 +7,10 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>File Share</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="/js/socket_file_share_client.js"></script>
     <script src="/js/view_control.js"></script>
+    <script src="/js/socket_control.js"></script>
+    <script src="/js/socket_file_share_client.js"></script>
+    
 </head>
 
 <body>
