--- a/src/views/room.hbs
+++ b/src/views/room.hbs
@@ -1,5 +1,5 @@
 <div id="main-container" class="container text-center d-flex h-75 m-auto">
-    <div id="loading-view" class=" m-auto">
+    <div id="main-view" class=" m-auto w-100 d-flex flex-column">
         <h1>  
             <div class="spinner-border" role="status">
                 <span class="sr-only"></span>
