XỬ lý xóa user khi thoát"

--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <div class="text-end">
-    <a href="https://github.com/" class=" text-dark">
+    <a href="https://github.com/VuHoang1492/share_file" class=" text-dark">
         <h3 class="m-1 "><i class="bi bi-github"></i></h3>
     </a>
 </div>
