--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -11,7 +11,7 @@
     <script src="/js/view_control.js"></script>
     <script src="/js/socket_control.js"></script>
     <script src="/js/socket_file_share_client.js"></script>
-    <script src="/js/FileSaver.js"></script>
+    <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
 
 </head>
 
