--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,9 +1,10 @@
 <div id="main-container" class="container text-center d-flex h-75 m-auto">
-    <div id="loading-view" class=" m-auto"> 
-        <h1>  
+    <div id="main-view" class=" m-auto">
+        <h1>
             <div class="spinner-border" role="status">
                 <span class="sr-only"></span>
             </div>
-        Loading...</h1>
+            Loading...
+        </h1>
     </div>
 </div>
