fix link github footer

--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,5 +1,7 @@
 <div class="text-end">
-    <a href="https://github.com/VuHoang1492/share_file" class=" text-dark">
-        <h3 class="m-1 "><i class="bi bi-github"></i></h3>
-    </a>
+        <h3 class="m-1 ">
+                <a href="https://github.com/VuHoang1492/share_file" class=" text-dark  w-100 h-100">
+                     <i class="bi bi-github"> </i> 
+                </a>
+        </h3>
 </div>
